[project]
name = "agent-doc-sync"
version = "0.1.1"
description = "pre-commit hook to keep sibling AGENTS.md and CLAUDE.md files in sync"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "SIM", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
